--- a/CheckList/ClientApp/app/components/todo/todo.details.component.html
+++ b/CheckList/ClientApp/app/components/todo/todo.details.component.html
@@ -1,7 +1,8 @@
 ﻿<h1>{{ title }}</h1>
+<br/>
 
 <div class="row">
-    <div class="col-lg-offset-3 col-lg-6 pull-left">
+    <div class="col-lg-6">
         <div class="input-group">
             <input type="text" class="form-control" placeholder="New item.." [(ngModel)]="newListItem">
             <span class="input-group-btn">
@@ -13,7 +14,10 @@
 
 <br />
 <div class="row" *ngFor="let item of items">
-    <label [style.text-decoration]="item.done ? 'line-through' : 'none'">
-        <input type="checkbox" [(ngModel)]="item.done" /> {{ item.title }}
-    </label>
+    <div class="col-lg-6">
+        <p>
+            <input type="checkbox" [(ngModel)]="item.done" [attr.id]="item.id" />
+            <label [style.text-decoration]="item.done ? 'line-through' : 'none'" [attr.for]="item.id">{{ item.title }}</label>
+        </p>
+    </div>
 </div>
