--- a/CheckList/ClientApp/app/components/todo/todo.details.component.html
+++ b/CheckList/ClientApp/app/components/todo/todo.details.component.html
@@ -16,7 +16,7 @@
 <div class="row" *ngFor="let item of items">
     <div class="col-lg-6">
         <p>
-            <input type="checkbox" [(ngModel)]="item.done" [attr.id]="item.id" />
+            <input type="checkbox" (change)="updateItemValue($event.target.getAttribute('ng-reflect-model'), item.id)" [(ngModel)]="item.done" [attr.id]="item.id" />
             <label [style.text-decoration]="item.done ? 'line-through' : 'none'" [attr.for]="item.id">{{ item.title }}</label>
         </p>
     </div>
